--- a/240509 linear model regression.ipynb
+++ b/240509 linear model regression.ipynb
@@ -190,6 +190,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- solver='sag' 옵션: stochastic average gradient descent 의 약자.\n",
+    "    - 대용량 데이터셋의 경우는 이 옵션을 써서 빠르게 처리하도록 할 수 있음."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
