--- a/240626 커널 서포트 벡터 머신.ipynb
+++ b/240626 커널 서포트 벡터 머신.ipynb
@@ -7,7 +7,31 @@
     "Kernelized support vector machines (SVM)\n",
     "----\n",
     "\n",
-    "- 분류와 회귀에 모두 사용할 수 있음."
+    "- 분류와 회귀에 모두 사용할 수 있음.\n",
+    "\n",
+    "- 분류\n",
+    "    - 각각의 data point가 두 class 중 어느 하나에 속하는 것으로 주어진 data가 주어졌을 때,\n",
+    "    - 새로운 data point가 어느 class에 속하는지 판단하는 비확률적 이진 선형분류모델을 구축\n",
+    "\n",
+    "- 구축 원리\n",
+    "    - 다른 방법들은 분류 오류율을 최소화 하려는 목적에서 개발. 반면 SVM은 두 부류 사이에 존재하는 **여백**을 최대화하는 목적을 가짐.\n",
+    "    - 초평면으로 두 class를 완벽히 분류가 가능하다고 가정하면,\n",
+    "        - 만들어질 수 있는 여러 분류모델 중, 경계와 data point 사이의 여백이 가장 커지는 경우를 선택.\n",
+    "        - 주어진 data points 중 경계와 가장 가까운 data points를 support vector라고 하는 듯.\n",
+    "        - 따라서 초평면 vector $\\vec \\omega$가 주어지고, 다른 class 에 속하는 support vector $x_+$와 $x_-$가 주어졌을 때 $|(x_+-x_-)\\bullet \\frac{\\vec \\omega}{|\\vec \\omega|}|$ 가 최대가 되도록 초평면 vector를 정하면 된다.\n",
+    "    - 그렇지 않은 경우,\n",
+    "        - 초평면을 그엇을 때, data points가 잘못된 쪽에 존재하는 것을 허용하되, 경계로부터 멀어질수록 강한 불이익을 주기 (data point가 반대편에 있더라도 최대한 경계 근처에 위치하기를 기대.)\n",
+    "        - slack variable 이라는 것을 도입한다고 함.\n",
+    "    - 올바른 편에 있으면서 support vector 보다 경계선에 더 멀리 떨어진 점들은 학습 결과에 영향을 주지 않는 것처럼 보인다. 실제 그런지는 수식을 좀 더 이해해야 확신할 듯.\n",
+    "    \n",
+    "\n",
+    "- 커널 기법\n",
+    "    - 데이터를 확장(특정 property 값의 제곱으로 이루어진 새로운 property를 추가한다든가.)하지 않고 확장된 특성을 사용하는 분류 학습을 가능하게 하는 방법.\n",
+    "    - 다항식 커널과 Gaussian kernel (=RBF=radial basis function)이 있음.\n",
+    "\n",
+    "    - 데이터 포인트 사이의 거리는 gaussian kernel에 의해 결정.\n",
+    "        - $k_{rbf}(x_1, x_2) = exp(-\\gamma{||x_1-x_2||}^2)$\n",
+    "            - 여기서 $||x_1-x_2||$는 유클리디안 거리, $\\gamma$는 가우시안 커널의 폭을 제어하는 매개변수"
    ]
   },
   {
